# LCL-Command

./: .gitignore  README.md  package.json
.github/workflows/: release.yml
Formula/: lcl-command.rb
packaging/homebrew/: lcl-command.rb
packaging/python/: README.md  pyproject.toml
packaging/python/src/lcl_command.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: build_release.py  set_version.py  sync_python_vendor.py
src/: cli.js  lcl_deploy.sh
