[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lcl-command"
version = "0.4.0"
description = "LaunchCloud Labs installable client wrapper for Mission Control and future SSH handoff."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "LaunchCloud Labs" }
]
keywords = ["launchcloudlabs", "mission-control", "cli", "ssh", "employee-portal"]
classifiers = [
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: JavaScript",
  "Operating System :: OS Independent"
]

[project.scripts]
lcl-command = "lcl_command_py.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.package-data]
lcl_command_py = ["vendor/bin/*.js", "vendor/src/*.js", "vendor/src/*.py"]
